--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.0",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "xss-clean": "^0.1.4"
   }
 }
